# apex-gui

./: .gitignore  CONSTANTS_AND_CONFIG.md  Cargo.toml  Cargo.toml.old  LICENSE.txt  Program.cs  README.md  apex-gui.csproj  apex-imgui.csproj  build.rs  config.json  requirements.txt  run.py  todo.txt  window_state.ini
.cursor/tmp/: mapping_v3514.rs  reading_v3514.rs
WeaponTemplates/: hemlok.png.deprecated
configs/: .current  apex_1080p_dse.json
gun_templates/: p2020_single.png.deprecated
models/: apexlegends.json
modules/: aim_configurate.py  controller.py  device_replug.py  hidhide.py  initialize.py  log_viewer.py
src/: Program.cs  gun_templates.rs  main.rs  modules.rs  shared_constants.rs  utils.rs
src/App/: AppBootstrap.cs  WindowState.cs
src/Capture/: CaptureTelemetry.cs  DesktopCaptureWorker.cs  DxgiDesktopDuplicator.cs  PerfSnapshot.cs  RealtimePerfStats.cs
src/Inference/: OnnxDmlWorker.cs  OnnxInferenceSnapshot.cs  OnnxModelConfig.cs  OnnxModelConfigLoader.cs
src/Input/: ViGEmMappingWorker.cs
src/Resources/: ResourceAssets.cs
src/Runtime/: RuntimePerformance.cs
src/Services/: ConfigAppService.cs  ConfigContextService.cs  ConfigFileLifecycleService.cs  ConfigSelectionService.cs  ConfigService.cs  DependencyService.cs  InputDeviceService.cs  SmartCoreMappingService.cs  SpecialWeaponLogicService.cs  WindowStateService.cs
src/Shared/: ResourceAssets.cs  RuntimePerformance.cs
src/SmartCore/: SmartCoreActivationEvaluator.cs  SmartCoreAimAssistContext.cs  SmartCoreAimAssistResult.cs  SmartCoreAimAssistService.cs  SmartCoreStickMapper.cs  SmartCoreTargetSelector.cs
src/States/: SmartCoreMappingState.cs  SnapConfigState.cs
src/UI/: HomeViewState.cs  ImGuiController.cs  MainWindow.DebugTab.cs  MainWindow.Home.ConfigModals.cs  MainWindow.Home.PreviewWindows.cs  MainWindow.Home.cs  MainWindow.HomeTab.cs  MainWindow.InputDevices.cs  MainWindow.PreviewWindow.cs  MainWindow.SmartCoreAimAssist.cs  MainWindow.Vision.cs  MainWindow.cs  SmartCorePreviewForm.cs
src/Vision/: DesktopCaptureWorker.cs  OnnxDmlWorker.cs
src/Workers/: SdlGamepadWorker.cs  ViGEmMappingWorker.cs
src/modules/: bg_con_mapping.rs  bg_con_reading.rs  bg_mouse_mapping.rs  bg_onnx_dml_od.rs  bg_screen_cap.rs  enemy_det_thread.rs  gamepad_mapping_thread.rs  gamepad_reading_thread.rs  hidhide.rs  mapping_state_machine.rs  mod.rs  screen_capture_thread.rs  update_check.rs  weapon_rec_thread.rs
src/utils/: bg_dl_instl.rs  config.rs  console_redirect.rs  mod.rs  ps_con_reenable.rs  tools.rs  ui.rs
utils/: log_cleaner.py  tools.py
(+18 files in other folders)
