[package]
name = "apex-egui"
version = "4.0.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"
strip = true

[dependencies]
eframe = "0.34.1"
egui = "0.34.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser"] }
sdl2 = { version = "0.38", features = ["bundled"] }
open = "5.3"
vigem_client = { package = "vigem-client", version = "0.1.4" }
windows-capture = "1.5.0"
ort = { version = "2.0.0-rc.12", features = ["directml"] }
anyhow = "1.0.102"
num_cpus = "1.17.0"
ureq = "3"
fast_image_resize = "6"
image = "0.25"
imageproc = "0.26"

[build-dependencies]
winresource = "0.1"
image = "0.25"
